CHANGES IN VERSION 1.29

NEW FEATURES

    o (1.29.1) Check for `install()` function calls in R and vignette code.

BUG FIXES

    o (1.29.2) rename internal function from checkIsPackageAlreadyInRepo to
    checkIsPackageNameAlreadyInUse
    o (1.29.3) Add unit tests for legacy function searches.

CHANGES IN VERSION 1.27
-----------------------

BUG FIX

    o (1.27.17) Update support site watched tags. tags are case insensitive
    o (1.27.15) Reporting checking of vignette despite package type
    (@lshep, #136) 
    o (1.27.9) Allow portability of child Rmd documents via parseFile
    o (1.27.3) Correct check for if package already exists in CRAN/Bioc
    o (1.27.3) Correct check for single colon use
    o (1.27.2) Correct path to R license database file by calling
    R.home('share').


NEW FEATURES

    o (1.27.16) Check vignettes for all package types (@lshep, #136)
    o (1.27.12) Check for `LazyData: TRUE` in the DESCRIPTION (@lshep, #128)
    o (1.27.11) R version dependency check in the 'DESCRIPTION' is now a
    'NOTE' (@lshep, #126)
    o (1.27.10) Check for 'error' and other keywords in signaler functions,
    'message', 'warning', and 'stop' etc. (@hpages, #125)
    o (1.27.8) Check for 'tests' entry in '.Rbuildignore'
    o (1.27.7) Removed BiocCheck and BiocCheckGitClone installation scripts;
    recommended usage is `BiocCheck()`
    o (1.27.6) Check that a user has the package name in watched tags of
    support site
    o (1.27.5) Check for 'paste' / 'paste0' in signaler functions, 'message',
    'warning', and 'stop' (@LiNk-NY, #64)
    o (1.27.4) Check for downloads from external resources (github, gitlab,
    bitbucket, dropbox; @LiNk-NY, #75)
    o (1.27.1) Check that licenses do not exclude classes of users,
    e.g., non-academic users.

CHANGES IN VERSION 1.25
-----------------------

DEPRECATION ANNOUNCEMENT

    o (1.25.11) R CMD BiocCheck and R CMD BiocCheckGitClone are deprecated. The